# toyGrad

./: README.md  main.py  pyproject.toml  train.py
core/: layers.py  losses.py  module.py  special.py
example/: Experiment.ipynb
utils/: helper.py  optimizer.py
