[project]
name = "toyGrad"
version = "0.1.0"
description = "A minimal autograd engine built from scratch to understand how PyTorch-style automatic differentiation works."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "ipykernel>=6.29.5",
    "matplotlib>=3.10.3",
    "numpy>=2.3.0",
    "pip>=25.1.1",
]
